# lcm-prompt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LCM_v2_Introduction.md  LICENSE  README.md  README_CN.md  README_EN.md  __init__.py  ab_test_router.py  adaptive_chunking.py  adaptive_injector.py  async_client.py  cache_builder.py  chunk_graph.py  chunk_store.py  client.py  compression.py  content_encoding.py  deep_stress_test.py  deep_stress_test_v2.py  detector.py  distributed.py  dynamic_renderer.py  encoded_chunk_store.py  encoder_base.py  encoding_registry.py  execution_profile.py  fine_tuning.py  golden_corpus.py  hybrid_mode.py  ir_models.py  kv_cache.py  label_system.py  langchain_adapter.py  lcm_engine.py  lcm_types.py  logger.py  multi_agent.py  multi_model_benchmark.py  (+21 more)
docs/: PAPER_CN.md  PAPER_EN.md
encoders/: __init__.py  ast_backend.py  chinese_think.py  code_intent.py  english_logic.py
encodings/: __init__.py  chinese_think_encoding.py
examples/: basic_usage.py
lcm/: __init__.py  client.py  core.py  env_loader.py  prompt.py  types.py
tests/: test_lcm.py
