[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lcm"
version = "3.0.0"
description = "LCM3 — Lazy Context Materialization with Multi-Granularity Encoding"
readme = "README_CN.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []
authors = [{name = "LCM Contributors"}]
keywords = ["llm", "agent", "prompt", "context", "lazy-loading", "encoding", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/YarXVI/lcm-prompt"
Repository = "https://github.com/YarXVI/lcm-prompt"

[tool.setuptools.packages.find]
include = ["lcm*"]
