[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lcm-prompt"
version = "1.0.0"
description = "Lazy Context Materialization (LCM) — Global Prompt Segmentation for Agent Frameworks"
readme = "README_EN.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.24.0"]
authors = [{name = "LCM Contributors"}]
keywords = ["llm", "agent", "prompt", "optimization", "context", "lazy-loading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/YarXVI/lcm-prompt"
Repository = "https://github.com/YarXVI/lcm-prompt"
Paper = "https://github.com/YarXVI/lcm-prompt/blob/main/docs/PAPER_EN.md"

[tool.setuptools.packages.find]
include = ["lcm*"]
